# course-otus

./: CMakeLists-33395-f84df1.txt  CMakeLists.txt  README.md  hello.cpp  циклы_for.cpp
homework2/: README.md
homework3/: CMakeLists.txt  chec_value.cpp  game_ganeral.cpp  high scores.txt  high_scores.cpp  pragma.hpp  random_value.cpp
new-homework1/: CMakeLists.txt  hello.cpp  move_me_out.cpp
new_homework/: CMakeLists copy.txt  CMakeLists.txt  example_function.cpp  hello.cpp  move_me_out.h
